compiler-core/src/javascript/tests/snapshots/gleam_core__javascript__tests__custom_types__aliased_variant_still_imported_if_used_in_instanceof_comparison_in_guard.snap
---
source: compiler-core/src/javascript/tests/custom_types.rs
expression: "\nimport wibble.{Wibble as Wobble}\n\npub fn go(x) {\n  case x {\n    _ if x == Wobble -> Wobble\n    _ -> wibble.Wobble\n  }\n}\n"
---
----- SOURCE CODE
-- wibble.gleam
pub type Wibble { Wibble Wobble }

-- main.gleam

import wibble.{Wibble as Wobble}

pub fn go(x) {
  case x {
    _ if x == Wobble -> Wobble
    _ -> wibble.Wobble
  }
}


----- COMPILED JAVASCRIPT
import * as $wibble from "../wibble.mjs";
import { Wibble as Wobble, Wibble$Wibble$const as Wibble$Wobble$const } from "../wibble.mjs";

export function go(x) {
  if (x instanceof Wobble) {
    return Wibble$Wobble$const;
  } else {
    return $wibble.Wibble$Wobble$const;
  }
}
