compiler-core/src/javascript/tests/snapshots/gleam_core__javascript__tests__custom_types__const_imported_ignoring_label.snap
---
source: compiler-core/src/javascript/tests/custom_types.rs
expression: "import other\npub const main = other.Two(1)\n"
---
import * as $other from "../other.mjs";

export const main = new $other.Two(1);
