compiler-core/src/javascript/tests/snapshots/gleam_core__javascript__tests__custom_types__const_unqualified_imported_no_label.snap
---
source: compiler-core/src/javascript/tests/custom_types.rs
expression: "import other.{Two}\npub const main = Two(1)\n"
---
----- SOURCE CODE
import other.{Two}
pub const main = Two(1)


----- COMPILED JAVASCRIPT
import * as $other from "../other.mjs";
import { Two } from "../other.mjs";

export const main = /* @__PURE__ */ new Two(1);
